--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Timeline</title>
+    <title>Jablonka - Un garçon comme vous et moi</title>
 </head>
 <body>
     <div class="container">
-        <h1>Timeline with HTML and CSS</h1>
+        <h1>Ivan Jablonka - Un garçon comme vous et moi (2021): vue chronologique de l'oeuvre</h1>
         <div class="timeline">
             <ul>
                 <li>
