--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li>
                     <div class="content">
-                        <h3>Lorem Ipsum is simply</h3>
+                        <h3>Chapitre 1 </h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -25,7 +25,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Lorem Ipsum is simply</h3>
+                        <h3>Chapitre 2 </h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -35,7 +35,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Lorem Ipsum is simply</h3>
+                        <h3>Chapitre 3</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -45,7 +45,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Lorem Ipsum is simply</h3>
+                        <h3>Chapitre 4</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -55,7 +55,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Lorem Ipsum is simply</h3>
+                        <h3>Chapitre 5</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -65,7 +65,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Lorem Ipsum is simply</h3>
+                        <h3>Chapitre 6</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
