Travail sur le chapitre 1

--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
             <ul>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 1 </h3>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                        <h3>Chapitre 1: "Je ne suis pas un mâle" </h3>
+                        <p><b>Temporalité du chapitre:</b> temps présent.</p>
+                        <p><b>Références:</b><br> Camus (Albert), <i>Premier Homme</i>, Paris, Gallimard, 1994.<br>
+                            Denjean (Cécile), <i>La Virilité</i>, France, film, 75min., 2019.<br>
+                            Eribon (Didier), <i>Retour à Reims</i>, Paris, Fayard, 2009.<br>
+                            Galienne (Guillaume), <i>Les Garçons et Guillaume, à table!</i>, France, film, 86min., 2013.<br>
+                            Meizoz (Jérôme), <i>Faire le garçon</i>, Genève, Zoé, 2017.<br>
+                            Way (Niobe), Chu (Judy), sous la direction de, <i> Adolescent Boys. Exploring Diverse Cultures of Boyhood</i>, New York, NYU Press, 2004.<br>
+                        </p>
+                        <p><b>Documents: </b> aucun.</p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>January 2019</h4>
+                        <h4>Temps présent.</h4>
                     </div>
                 </li>
                 <li>
