Chapitre 2 insertion informations

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Ivan Jablonka - Un garçon comme vous et moi (2021): vue chronologique de l'oeuvre</h1>
+        <h1>Ivan Jablonka - Un garçon comme vous et moi </h1>
+        <h1>L'oeuvre et son univers</h1>
         <div class="timeline">
             <ul>
                 <li>
@@ -28,13 +29,18 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>Temps présent.</h4>
+                        <h4>a</h4>
                     </div>
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 2 </h3>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                        <h3>Chapitre 2: Accouchement sans douleur </h3>
+                        <p><b>Temporalité du chapitre:</b> Naissance de l'auteur</p>
+                        <p><b>Références:</b><br> Douglass (Frederick), <i>Vie d'un esclave américain</i>, Paris, Nouveau Monde, 2018.<br>
+                            Michaels (Paula), <i>Lamaze. An International History</i>, Oxford, Oxford University Press, 2014.<br>
+                            Schmitt (Jean-Claude), <i>L'invention de l'anniversaire</i>, Paris, Arkhê, 2009.<br>
+                        </p>
+                        <p><b>Documents: </b> À la maternité (photos dans le journal d'enfance de l'auteur, octobre 1973)</p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
