Tentative ajout image

--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
                             Schmitt (Jean-Claude), <i>L'invention de l'anniversaire</i>, Paris, Arkhê, 2009.<br>
                         </p>
                         <p><b>Documents: </b> À la maternité (photos dans le journal d'enfance de l'auteur, octobre 1973)</p>
+                    <!-- insertion image, vérifier pourquoi cela ne fonctionne pas
+                        <p><img src="Image1.jpeg" alt="Photo à la maternité" width="100px" height="50px" /></p>  -->
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>January 2019</h4>
+                        <h4>r</h4>
                     </div>
                 </li>
                 <li>
