--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>a</h4>
+                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
@@ -40,19 +40,26 @@
                             Michaels (Paula), <i>Lamaze. An International History</i>, Oxford, Oxford University Press, 2014.<br>
                             Schmitt (Jean-Claude), <i>L'invention de l'anniversaire</i>, Paris, Arkhê, 2009.<br>
                         </p>
-                        <p><b>Documents: </b> À la maternité (photos dans le journal d'enfance de l'auteur, octobre 1973)</p>
+                        <p><b>Documents: </b><br> À la maternité (photos dans le journal d'enfance de l'auteur, octobre 1973)</p>
                     <!-- insertion image, vérifier pourquoi cela ne fonctionne pas
                         <p><img src="Image1.jpeg" alt="Photo à la maternité" width="100px" height="50px" /></p>  -->
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>r</h4>
+                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 3</h3>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                        <h3>Chapitre 3: Le journal d'enfance</h3>
+                        <p><b>Temporalité du chapitre:</b> Naissance - Petite enfance</p>
+                        <p><b>Références:</b><br> Douglass (Frederick), <i>Vie d'un esclave américain</i>, Paris, Nouveau Monde, 2018.<br>
+                            Michaels (Paula), <i>Lamaze. An International History</i>, Oxford, Oxford University Press, 2014.<br>
+                            Schmitt (Jean-Claude), <i>L'invention de l'anniversaire</i>, Paris, Arkhê, 2009.<br>
+                        </p>
+                        <p><b>Documents: </b><br> Extrait du journal d'enfance: première page, <i>Premiers jours du nouveau-né, L'évènement des premières fois.</i><br>
+                            Mèche de cheveux (collée dans le journal d'enface de l'auteur, juin 1975)
+                        </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
