--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
                     <div class="content">
                         <h3>Chapitre 3: Le journal d'enfance</h3>
                         <p><b>Temporalité du chapitre:</b> Naissance - Petite enfance</p>
-                        <p><b>Références:</b><br> Douglass (Frederick), <i>Vie d'un esclave américain</i>, Paris, Nouveau Monde, 2018.<br>
-                            Michaels (Paula), <i>Lamaze. An International History</i>, Oxford, Oxford University Press, 2014.<br>
-                            Schmitt (Jean-Claude), <i>L'invention de l'anniversaire</i>, Paris, Arkhê, 2009.<br>
+                        <p><b>Références:</b><br> 
+                            Compère (Marie-Madeleine), "Compte rendu de <i>L'Art d'accommoder les bébés</i> de Geneviève Delaisi de Parseval et Suzanne Lallemand", <i>Histoire de l'éducation</i>, n°9, 1980, p.59-60.<br>
+                            Foisil (Madeleine), sous la direction de, <i>Journal de Jean Héroard</i>, Paris, Fayard, 1989. <br>
+                            Fonssagrives (Jean-Baptiste), <i>Livret maternel pour prendre des notes sur les enfants</i>, Paris, Hachette, 1869. <br>
+                            Rollet (Catherine), <i>Les Carnets de santé des enfants</i>, Paris, La Dispute, 2008.
                         </p>
                         <p><b>Documents: </b><br> Extrait du journal d'enfance: première page, <i>Premiers jours du nouveau-né, L'évènement des premières fois.</i><br>
                             Mèche de cheveux (collée dans le journal d'enface de l'auteur, juin 1975)
@@ -63,7 +65,7 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>January 2019</h4>
+                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
