--- a/index.html
+++ b/index.html
@@ -70,22 +70,36 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 4</h3>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                        <h3>Chapitre 4: Aux origines de l'angoisse</h3>
+                        <p><b>Temporalité du chapitre: </b>Petite enfance</p>
+                        <p><b>Références:</b><br> 
+                            Aucune.
+                        </p>
+                        <p><b>Documents: </b><br> Divers extraits du journal d'enfance.<br>
+                        </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>January 2019</h4>
+                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 5</h3>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                        <h3>Chapitre 5: Cul nu à la Bédoule</h3>
+                        <p><b>Temporalité du chapitre:</b> Fin des années 80</p>
+                        <p><b>Références:</b><br> 
+                            Baubérot (Arnaud), <i>Histoire du naturisme. Le mythe du retour à la nature</i>, Rennes, Presses universitaires de Rennes, 2004. <br>
+                            Maitron (Jean), Bertrand (Thierry), "Zisly, Henri", <i>in</i> Pennetier (Claude), sous la direction de, <i>Dictionnaire biographique, mouvement ouvrier, mouvement social</i>, Paris, L'Atelier, 2006. <br>
+                            Miesseford (Oxent), <i>Au maquis de Barrême. Souvenirs en vrac</i>, Marseille, Egrégores, 2006. <br>
+                            Rouhet (Georges), <i>Revenons à la nature et régénérons-nous</i>, Paris, Berger-Levrault, 1913. <br>
+                            Sylvère (Antoine), <i>Toinou. Le cri d'un enfant auvergnat</i>, Paris, Plon, 1980. 
+                        </p>
+                        <p><b>Documents: </b><br> Aucun.
+                        </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>January 2019</h4>
+                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
