--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
+                        <h4>insérer image livre</h4>
                     </div>
                 </li>
                 <li>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
+                        <h4>insérer image livre + tableaux</h4>
                     </div>
                 </li>
                 <li>
@@ -105,6 +105,146 @@
                 <li>
                     <div class="content">
                         <h3>Chapitre 6</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>insérer image livre</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 7</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>insérer image livre</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 8</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>insérer image livre</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 9</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>January 2019</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 10</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>insérer image livre</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 11</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>January 2019</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 12</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>insérer image livre</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 13</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>insérer image livre</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 14</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>insérer image livre</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 15</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>January 2019</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 16</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>insérer image livre</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 17</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>January 2019</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 18</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>January 2019</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 19</h3>
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
+                    <div class="point"></div>
+                    <div class="date">
+                        <h4>insérer image livre</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Chapitre 20</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
