--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
                 <li>
                     <div class="content">
                         <h3>Chapitre 6</h3>
-                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                        <p><b>Temporalité du chapitre:</b> 1979-1980</p>
+                        <p><b>Références:</b><br> 
+                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                        </p>
+                        <p><b>Documents: </b><br> Dessin d'enfance.
+                        </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
