--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 6</h3>
+                        <h3>Chapitre 6: l'éducation bienveillante</h3>
                         <p><b>Temporalité du chapitre:</b> 1979-1980</p>
                         <p><b>Références:</b><br> 
                             Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
                         </p>
-                        <p><b>Documents: </b><br> Dessin d'enfance.
+                        <p><b>Documents: </b><br> Dessin d'anniversaire (Palo Alto, octobre 1979).
                         </p>
                     </div>
                     <div class="point"></div>
@@ -119,7 +119,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 7</h3>
+                        <h3>Chapitre 7: À la déli-délo</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -129,7 +129,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 8</h3>
+                        <h3>Chapitre 8 Les maîtresses-mamans: </h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -139,7 +139,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 9</h3>
+                        <h3>Chapitre 9: Délivrer Chloé</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -149,7 +149,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 10</h3>
+                        <h3>Chapitre 10: Goldorak ou la vulnérabilité des garçons</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -159,7 +159,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 11</h3>
+                        <h3>Chapitre 11: "Un peu d'astuce, d'espièglerie"</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -169,7 +169,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 12</h3>
+                        <h3>Chapitre 12: Vive la vive!</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -179,7 +179,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 13</h3>
+                        <h3>Chapitre 13: Petites violences</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -189,7 +189,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 14</h3>
+                        <h3>Chapitre 14: Joysticks et ballons</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -199,7 +199,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 15</h3>
+                        <h3>Chapitre 15: Le grand lycée parisien</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -209,7 +209,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 16</h3>
+                        <h3>Chapitre 16: Naissance du bon élève</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -219,7 +219,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 17</h3>
+                        <h3>Chapitre 17: Lettre ouverte aux mufles</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -229,7 +229,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 18</h3>
+                        <h3>Chapitre 18: La garçonnité à succès</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -239,7 +239,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 19</h3>
+                        <h3>Chapitre 19: Les soirées de Clamart</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
@@ -249,7 +249,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Chapitre 20</h3>
+                        <h3>Chapitre 20: Histoire de Partrick</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
                     <div class="point"></div>
